--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>my second repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I can Code now</h1>
+    <p>This is my web lerning stage. I am learning how to use git.</p>
 </body>
 </html>
