--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>I can Code now</h1>
     <p>This is my web lerning stage. I am learning how to use git.</p>
+    <img src="mnk.jpg">
 </body>
 </html>
