--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>I can Code now</h1>
     <p>This is my web lerning stage. I am learning how to use git.</p>
     <img src="mnk.jpg">
+    <img src="hello.jpg" alt="">
 </body>
 </html>
